Closed
Bug 1228134
Opened 9 years ago
Closed 9 years ago
startup crash in SpCreateMutex in Firefox 42
Categories
(Core :: Web Speech, defect)
Tracking
()
People
(Reporter: philipp, Assigned: m_kato)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
992 bytes,
patch
|
eeejay
:
review+
lizzard
:
approval-mozilla-aurora+
lizzard
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-8de6be5e-424e-4a05-a452-ecbff2151125.
=============================================================
Crashing Thread
Frame Module Signature Source
0 sapi.dll SpCreateMutex(int, unsigned short const*, unsigned long)
1 sapi.dll CSpObjectToken::InitFromDataKey(unsigned short const*, unsigned short const*, ISpDataKey*)
2 sapi.dll CSpObjectTokenEnumBuilder::AddTokensFromDataKey(ISpDataKey*, unsigned short const*, unsigned short const*)
3 sapi.dll CSpObjectTokenCategory::InternalEnumTokens(unsigned short const*, unsigned short const*, IEnumSpObjectTokens**, int)
4 sapi.dll CSpObjectTokenCategory::EnumTokens(unsigned short const*, unsigned short const*, IEnumSpObjectTokens**)
5 xul.dll mozilla::dom::SapiService::RegisterVoices() dom/media/webspeech/synth/windows/SapiService.cpp
6 xul.dll mozilla::dom::SapiService::Init() dom/media/webspeech/synth/windows/SapiService.cpp
7 xul.dll mozilla::dom::SapiService::GetInstance() dom/media/webspeech/synth/windows/SapiService.cpp
8 xul.dll SapiServiceConstructor dom/media/webspeech/synth/windows/SapiModule.cpp
9 xul.dll mozilla::GenericFactory::CreateInstance(nsISupports*, nsID const&, void**) xpcom/glue/GenericFactory.cpp
10 xul.dll nsComponentManagerImpl::CreateInstanceByContractID(char const*, nsISupports*, nsID const&, void**) xpcom/components/nsComponentManager.cpp
11 xul.dll nsComponentManagerImpl::GetServiceByContractID(char const*, nsID const&, void**) xpcom/components/nsComponentManager.cpp
12 xul.dll xul.dll@0x1bba8e3
13 xul.dll nsTHashtable<nsBaseHashtableET<nsCStringHashKey, nsFactoryEntry*> >::s_HashKey(PLDHashTable*, void const*) xpcom/glue/nsTHashtable.h
14 xul.dll nsCOMPtr_base::assign_from_gs_contractid(nsGetServiceByContractID, nsID const&) xpcom/glue/nsCOMPtr.cpp
15 xul.dll nsCOMPtr<nsISupports>::nsCOMPtr<nsISupports>(nsGetServiceByContractID) xpcom/glue/nsCOMPtr.h
16 xul.dll NS_CreateServicesFromCategory(char const*, nsISupports*, char const*) xpcom/components/nsCategoryManager.cpp
we had a user in the sumo forum reporting this as a persistent startup crash: https://support.mozilla.org/en-US/questions/1096003
looking at crash data its volume is very low, put it seems to have been introduced by the work in 42 around the webspeechapi in bug 1003457.
| Reporter | ||
Updated•9 years ago
|
Summary: startup crash in SpCreateMutex in FIreofx 42 → startup crash in SpCreateMutex in Firefox 42
Comment 1•9 years ago
|
||
But text to speech isn't enabled by default.
Hmm, or are we instantiating the service by default? that would be a rather annoying behavior.
Component: DOM → Web Speech
Comment 2•9 years ago
|
||
Makoto,
Does the service start up even if synth is disabled. Could you make sense of this stack trace?
Flags: needinfo?(m_kato)
| Assignee | ||
Comment 3•9 years ago
|
||
Humm, I have no idea why Enumeration crashes, but I forget checking webspeech.enabled on Windows backend. So I can fix it on Firefox 42-44 as default setting. That patch is coming.
Flags: needinfo?(m_kato)
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → m_kato
| Assignee | ||
Updated•9 years ago
|
Keywords: leave-open
| Assignee | ||
Comment 4•9 years ago
|
||
| Assignee | ||
Comment 5•9 years ago
|
||
Comment on attachment 8692321 [details] [diff] [review]
Should check media.webspeech.synth.enabled on Windows SAPI backend
I forget checking media.webspeech.synth.enabled prefs on Windows backend. WebSpeech is disabled until Firefox 44, we should check it.
But this bug is leave-open state since Firefox 45 turns on this feature. I am still investigating.
Attachment #8692321 -
Flags: review?(eitan)
Updated•9 years ago
|
Attachment #8692321 -
Flags: review?(eitan) → review+
Comment 7•9 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 8•9 years ago
|
||
Comment on attachment 8692321 [details] [diff] [review]
Should check media.webspeech.synth.enabled on Windows SAPI backend
Approval Request Comment
[Feature/regressing bug #]:
Bug 1003457
[User impact if declined]:
Although I cannot reproduce this, crash reporter reports a few user meets startup crash on Firefox 42.
Web Speech Synthesis API isn't turned off Firefox 43 and 44 as default. So this XPCOM service for speech synthesis shouldn't be run, but it runs unfortunately.
[Describe test coverage new/current, TreeHerder]:
Landed on m-c
[Risks and why]:
No.
Web Speech Synthesis API isn't turned off Firefox 43 and 44 as default. So I add checking perfs for it.
[String/UUID change made/needed]:
N/A
Attachment #8692321 -
Flags: approval-mozilla-beta?
Attachment #8692321 -
Flags: approval-mozilla-aurora?
Comment 9•9 years ago
|
||
Comment on attachment 8692321 [details] [diff] [review]
Should check media.webspeech.synth.enabled on Windows SAPI backend
Approved for uplift to aurora and beta, small fix for text to speech crash.
Attachment #8692321 -
Flags: approval-mozilla-beta?
Attachment #8692321 -
Flags: approval-mozilla-beta+
Attachment #8692321 -
Flags: approval-mozilla-aurora?
Attachment #8692321 -
Flags: approval-mozilla-aurora+
Comment 10•9 years ago
|
||
adding tracking for 43-44 so that we catch this if it reopens or doesn't land.
Comment 11•9 years ago
|
||
Comment 12•9 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
| Assignee | ||
Comment 14•9 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #13)
> Any news here? :)
Nothing. But WebSpeech synthesis is tuned on Nightly, but I cannot find this crash.
Flags: needinfo?(m_kato)
| Assignee | ||
Comment 15•9 years ago
|
||
Firefox 49 is released with speech synthesis API, but there is no same crash signature. So I will close this as fixed.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Comment 16•7 years ago
|
||
Removing leave-open keyword from resolved bugs, per :sylvestre.
Keywords: leave-open
You need to log in
before you can comment on or make changes to this bug.
Description
•