Bug 1228134 - Should check media.webspeech.synth.enabled on Windows SAPI backend. r=eeejay, a=lizzard